[NGOCMINH] [UPDATE]: Update APIs
- schoolAdvice: request param + year
- admissionName: update school year
- universityTrainingProgramId: add to scoreAdviceV2, schoolDirectory
- majors, subject-groups, methods: add to school-directory
- response of SchoolDirectoryReponse: new